--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
     "lint": "eslint --config .eslintrc.js --ext .js --ignore-path .gitignore .",
     "pretest": "npm run lint",
     "test": "ava",
-    "start": "nodemon -e js,graphql,json server"
+    "start": "nodemon -e js,json server"
   },
   "dependencies": {
-    "@tadashi/hex-id": "1.1.0",
+    "@koa/router": "8.0.1",
+    "@tadashi/hex-id": "1.1.1",
+    "@tadashi/jwt": "3.1.0",
+    "@tadashi/koa-base": "3.9.0",
     "debug": "4.1.1",
-    "koa-app-base": "3.8.0",
-    "koa-bodyparser": "4.2.1",
-    "koa-router": "7.4.0"
+    "koa-bodyparser": "4.2.1"
   },
   "devDependencies": {
     "eslint": "6.5.1",
