--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,16 @@
 .*
 bin
+coverage
 node_modules
-public
 test
+
 docker-compose*
-Dockerfile
-nodemon.json
+Dockerfile*
+
+LICENSE
+license
+readme.md
+README.md
+
+!bin/wait
+!bin/_fn
