--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{md,yml,json}]
+[*.{md,yml,json,graphql}]
 indent_style = space
 
 [*.{md,yml}]
