--- a/.env-development
+++ b/.env-development
@@ -1,13 +1,18 @@
-REGISTRY=local
-IMAGE=lagden/api_rest
 NODE_ENV=development
+APP_ENV=development
 
-PORT_PUBLISHED=31000
-PORT=3000
-
-DEBUG_PREFIX=api_rest
-DEBUG=api_rest:*
-
-SECRET_KEY=/run/secrets/api_rest_key
+NETWORK_NAME=${APP_NS}_net_${APP_ENV}
+VOL_NAME=${APP_NS}_vol_${APP_ENV}
 
 VERSION=dev
+
+# --------------
+# Deploy config
+
+DEPLOY_RESOURCES_LIMITS_CPUS=0.50
+DEPLOY_RESERVATIONS_LIMITS_CPUS=0.25
+
+#---------------
+
+WATCH_FOLDERS="server"
+WATCH_CMD="npm start"
