--- a/.env-production
+++ b/.env-production
@@ -1,13 +1,3 @@
-REGISTRY=docker.io
-IMAGE=lagden/api_rest
-NODE_ENV=production
-
-PORT_PUBLISHED=31000
-PORT=3000
-
-DEBUG_PREFIX=api_rest
-DEBUG=api_rest:error
-
-SECRET_KEY=/run/secrets/api_rest_key
+DEBUG=${DEBUG_PREFIX}:error
 
 VERSION=1.0.0
