--- a/.env-staging
+++ b/.env-staging
@@ -1,13 +1,7 @@
-REGISTRY=docker.io
-IMAGE=lagden/api_rest
 NODE_ENV=production
+APP_ENV=staging
 
-PORT_PUBLISHED=31001
-PORT=3000
-
-DEBUG_PREFIX=api_rest
-DEBUG=api_rest:*
-
-SECRET_KEY=/run/secrets/api_rest_key
+NETWORK_NAME=${APP_NS}_net_${APP_ENV}
+VOL_NAME=${APP_NS}_vol_${APP_ENV}
 
 VERSION=1.0.0-staging
