--- a/.env-test
+++ b/.env-test
@@ -1,13 +1,7 @@
-REGISTRY=local
-IMAGE=lagden/api_rest
 NODE_ENV=development
+APP_ENV=test
 
-PORT_PUBLISHED=31000
-PORT=3000
-
-DEBUG_PREFIX=api_rest
-DEBUG=api_rest:*
-
-SECRET_KEY=/run/secrets/api_rest_key
+NETWORK_NAME=${APP_NS}_net_${APP_ENV}
+VOL_NAME=${APP_NS}_vol_${APP_ENV}
 
 VERSION=test
