--- a/docker-compose.template.yml
+++ b/docker-compose.template.yml
@@ -1,25 +1,37 @@
 version: "3.7"
 services:
-  api_boilerplate:
+  app:
     image: ${REGISTRY}/${IMAGE}:${VERSION}
-    command: ["node", "server"]
+    command: >
+      /bin/ash -c "
+        node server
+      "
     environment:
-      - NODE_ENV=${NODE_ENV}
-      - PORT=${PORT}
-      - DEBUG_COLORS=1
-      - DEBUG=${DEBUG}
-      - DEBUG_PREFIX=${DEBUG_PREFIX}
-      - SECRET_KEY=${SECRET_KEY}
-      - VERSION=${VERSION}
+      DEBUG_HIDE_DATE: ${DEBUG_HIDE_DATE}
+      DEBUG_COLORS: ${DEBUG_COLORS}
+      DEBUG_PREFIX: ${DEBUG_PREFIX}
+      DEBUG: ${DEBUG}
+      NODE_ENV: ${NODE_ENV}
+      APP_ENV: ${APP_ENV}
+      PORT: ${PORT}
+      PORT_PUBLISHED: ${PORT_PUBLISHED}
+      # coloque seus envs
     ports:
       - ${PORT_PUBLISHED}:${PORT}
-    secrets:
-      - api_rest_key
+    networks:
+      - net
     deploy:
+      replicas: ${DEPLOY_REPLICAS}
+      resources:
+        limits:
+          cpus: ${DEPLOY_RESOURCES_LIMITS_CPUS}
+          memory: ${DEPLOY_RESOURCES_LIMITS_MEMORY}
+        reservations:
+          cpus: ${DEPLOY_RESERVATIONS_LIMITS_CPUS}
+          memory: ${DEPLOY_RESERVATIONS_LIMITS_MEMORY}
       restart_policy:
         condition: on-failure
 
-secrets:
-  api_rest_key:
-    name: api_rest_key_${NODE_ENV}
-    external: true
+networks:
+  net:
+    name: ${NETWORK_NAME}
