--- a/.env-test
+++ b/.env-test
@@ -5,3 +5,9 @@ NETWORK_NAME=${APP_NS}_net_${APP_ENV}
 VOL_NAME=${APP_NS}_vol_${APP_ENV}
 
 VERSION=test
+
+# --------------
+# Deploy config
+
+DEPLOY_RESOURCES_LIMITS_CPUS=0.50
+DEPLOY_RESERVATIONS_LIMITS_CPUS=0.25
